review and simplify
Signed-off-by: neo <1100909+neowu@users.noreply.github.com>